[package]
name = "timestamping"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
sha2 = "0.10"
hyper = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "benchmark"
path = "benchmark/benchmark.rs"
